# bosch_imu_driver

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: imu_bosch.yaml  imu_bosh.yaml
launch/: imu.launch
nodes/: bosch_imu_node.py  bosh_imu_node.py
